--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/maria-grig/2.NODE.JS/issues"
   },
-  "homepage": "https://github.com/maria-grig/2.NODE.JS#readme"
+  "homepage": "https://github.com/maria-grig/2.NODE.JS#readme",
+  "devDependencies": {
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "2.8.0"
+  }
 }
